--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
     "serverless": "^3.36.0"
   }
 }
