--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,37 @@
 **/node_modules
 **/dist
 
+# vite
+**/.vite
+
 # serverless
 **/.serverless
 
 # terraform
 **/.terraform
 **/terraform.tfstate.backup
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
