read README.md of all repo in the account to produce a prompt

--- a/lambdas/generator/serverless.yml
+++ b/lambdas/generator/serverless.yml
@@ -9,12 +9,12 @@ provider:
     name: ${self:provider.stage}-sls-generator
 
 functions:
-  hello:
-    handler: handler.hello
+  generate_criteria:
+    handler: handler.generate_criteria
     events:
       - httpApi:
           path: /
-          method: get
+          method: POST
 
 
 plugins:
