--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # serverless
 **/.serverless
 
+# python
+**/.venv
+
 # terraform
 **/.terraform
 **/terraform.tfstate.backup
@@ -35,3 +38,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+**/.env
