attach role to serverless.yml

--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -8,6 +8,8 @@ provider:
   stage: dev
   deploymentBucket:
     name: ${self:provider.stage}-sls-authentication
+  iam:
+    role: ${ssm:/terraform/iam/lambda-role-arn}
 
 functions:
   register:
