update route to /register

--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -20,7 +20,7 @@ functions:
     handler: handler.register
     events:
       - http:
-          path: /
+          path: /register
           method: POST
 
 plugins:
