--- a/lambdas/generator/requirements.txt
+++ b/lambdas/generator/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 anyio==3.7.1
 certifi==2023.11.17
+charset-normalizer==3.3.2
 distro==1.8.0
 exceptiongroup==1.1.3
 h11==0.14.0
@@ -11,6 +12,7 @@ openai==1.3.3
 pydantic==2.5.1
 pydantic_core==2.14.3
 python-dotenv==1.0.0
+requests==2.31.0
 sniffio==1.3.0
 tqdm==4.66.1
 typing_extensions==4.8.0
