--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -5,7 +5,9 @@ frameworkVersion: "3"
 provider:
   name: aws
   runtime: python3.9
+  architecture: arm64
   stage: dev
+  region: us-east-1
   deploymentBucket:
     name: ${self:provider.stage}-sls-authentication
   iam:
@@ -13,11 +15,20 @@ provider:
   apiGateway:
     restApiId: ${ssm:/terraform/api_gateway/id}
     restApiRootResourceId: ${ssm:/terraform/api_gateway/root_resource_id}
+  ecr:
+    images:
+      default:
+        path: ./
+        file: Dockerfile
+        buildArgs:
 
 functions:
   register:
     name: ${self:provider.stage}-authentication-register
-    handler: handler.register
+    image:
+      name: default
+      command:
+        - handler.register
     environment:
       ENVIRONMENT: ${self:provider.stage}
     events:
@@ -26,5 +37,4 @@ functions:
           method: POST
 
 plugins:
-  - serverless-python-requirements
   - serverless-deployment-bucket
