--- a/lambdas/evaluator/requirements.txt
+++ b/lambdas/evaluator/requirements.txt
@@ -1,5 +1,24 @@
+annotated-types==0.6.0
+anyio==3.7.1
+botocore==1.32.3
 certifi==2023.11.17
 charset-normalizer==3.3.2
+distro==1.8.0
+exceptiongroup==1.1.3
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.1
 idna==3.4
+jmespath==1.0.1
+openai==1.3.3
+pydantic==2.5.1
+pydantic_core==2.14.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 requests==2.31.0
-urllib3==2.1.0
+s3transfer==0.7.0
+six==1.16.0
+sniffio==1.3.0
+tqdm==4.66.1
+typing_extensions==4.8.0
+urllib3==1.26.18
