set up cors in serverless.yml

--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -35,6 +35,8 @@ functions:
       - http:
           path: /register
           method: POST
+          cors: true
+
   login:
     name: ${self:provider.stage}-authentication-login
     image:
