--- a/lambdas/authentication/Dockerfile
+++ b/lambdas/authentication/Dockerfile
@@ -1,10 +1,15 @@
 FROM public.ecr.aws/lambda/python:3.9
 
-COPY requirements.txt ${LAMBDA_TASK_ROOT}
+# Set the working directory to Lambda task root (default is /var/task)
+WORKDIR ${LAMBDA_TASK_ROOT}
 
+# Copy the requirements.txt file and install dependencies
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 
-COPY handler.py ${LAMBDA_TASK_ROOT}
+# Copy the necessary files and directories to the container
+COPY *.py .
+COPY utils/ ./utils/
 
-# actual command will be in serverless.yml
-CMD [ "handler" ]
+# Set the CMD to your handler (this will be overwritten by Lambda)
+CMD ["handler"]
