--- a/lambdas/authentication/requirements.txt
+++ b/lambdas/authentication/requirements.txt
@@ -1,10 +1,14 @@
+bcrypt==4.0.1
 boto3==1.29.3
 botocore==1.32.3
+flake8==6.1.0
 jmespath==1.0.1
 mccabe==0.7.0
+psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+pyflakes==3.1.0
 PyJWT==2.8.0
 python-dateutil==2.8.2
 s3transfer==0.7.0
 six==1.16.0
 urllib3==1.26.18
-bcrypt==4.0.1
