set timeout 60 for evaluate lambda

--- a/lambdas/criteria/serverless.yml
+++ b/lambdas/criteria/serverless.yml
@@ -26,6 +26,7 @@ provider:
 functions:
   evaluate:
     name: ${self:provider.stage}-criteria-evaluate
+    timeout: 60
     image:
       name: default
       command:
