update secrets to be fetched from ssm

--- a/lambdas/criteria/serverless.yml
+++ b/lambdas/criteria/serverless.yml
@@ -23,8 +23,8 @@ provider:
         buildArgs:
 
   environment:
-    OPENAI_API_KEY: ${env:OPENAI_API_KEY}
-    GITHUB_TOKEN: ${env:GITHUB_TOKEN}
+    OPENAI_API_KEY: ${ssm:/terraform/ssm/openai_api_key}
+    GITHUB_TOKEN: ${ssm:/terraform/ssm/github_token}
 
 functions:
   evaluate:
