set timeout 30 sec for generator

--- a/lambdas/criteria/serverless.yml
+++ b/lambdas/criteria/serverless.yml
@@ -46,6 +46,7 @@ functions:
 
   generate:
     name: ${self:provider.stage}-criteria-generate
+    timeout: 30
     image:
       name: default
       command:
