--- a/lambdas/criteria/requirements.txt
+++ b/lambdas/criteria/requirements.txt
@@ -10,7 +10,9 @@ httpcore==1.0.2
 httpx==0.25.1
 idna==3.4
 jmespath==1.0.1
+mccabe==0.7.0
 openai==1.3.3
+psycopg2-binary==2.9.9
 pydantic==2.5.1
 pydantic_core==2.14.3
 python-dateutil==2.8.2
