--- a/lambdas/criteria/requirements.txt
+++ b/lambdas/criteria/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 anyio==3.7.1
-botocore==1.32.3
+boto3==1.29.6
+botocore==1.32.6
 certifi==2023.11.17
 charset-normalizer==3.3.2
 distro==1.8.0
@@ -10,7 +11,9 @@ httpcore==1.0.2
 httpx==0.25.1
 idna==3.4
 jmespath==1.0.1
+mccabe==0.7.0
 openai==1.3.3
+psycopg2-binary==2.9.9
 pydantic==2.5.1
 pydantic_core==2.14.3
 python-dateutil==2.8.2
