--- a/lambdas/criteria/requirements.txt
+++ b/lambdas/criteria/requirements.txt
@@ -1,10 +1,12 @@
 annotated-types==0.6.0
 anyio==3.7.1
-botocore==1.32.3
+boto3==1.29.6
+botocore==1.32.6
 certifi==2023.11.17
 charset-normalizer==3.3.2
 distro==1.8.0
 exceptiongroup==1.1.3
+flake8==6.1.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.1
@@ -15,6 +17,7 @@ openai==1.3.3
 psycopg2-binary==2.9.9
 pydantic==2.5.1
 pydantic_core==2.14.3
+pyflakes==3.1.0
 python-dateutil==2.8.2
 requests==2.31.0
 s3transfer==0.7.0
