update Dockerfile to copy over liquibase.properties

--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,7 @@
 FROM liquibase/liquibase
 
 COPY ./changelog /liquibase/changelog
+COPY ./config/liquibase.properties /liquibase/config/liquibase.properties
 COPY *.xml /liquibase/
 
 WORKDIR /liquibase
