--- a/lambdas/authentication/requirements.txt
+++ b/lambdas/authentication/requirements.txt
@@ -1,7 +1,10 @@
 bcrypt==4.0.1
 boto3==1.29.3
 botocore==1.32.3
+certifi==2023.11.17
+charset-normalizer==3.3.2
 flake8==6.1.0
+idna==3.6
 jmespath==1.0.1
 mccabe==0.7.0
 psycopg2-binary==2.9.9
@@ -9,6 +12,7 @@ pycodestyle==2.11.1
 pyflakes==3.1.0
 PyJWT==2.8.0
 python-dateutil==2.8.2
+requests==2.31.0
 s3transfer==0.7.0
 six==1.16.0
 urllib3==1.26.18
