configure authorizer image command

--- a/lambdas/authorizer/serverless.yml
+++ b/lambdas/authorizer/serverless.yml
@@ -31,7 +31,7 @@ functions:
     image:
       name: default
       command:
-        - handler.authorize
+        - authorize.handler
 
 plugins:
   - serverless-deployment-bucket
