--- a/lambdas/checklist/Dockerfile
+++ b/lambdas/checklist/Dockerfile
@@ -8,7 +8,7 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # Copy the necessary files and directories to the container
-COPY *.py .env ./
+COPY *.py ./
 COPY client/ ./client/
 COPY utils/ ./utils/
 
