--- a/lambdas/checklist/serverless.yml
+++ b/lambdas/checklist/serverless.yml
@@ -30,6 +30,7 @@ provider:
     POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
+    EVALUATION_QUEUE_URL: ${ssm:/secrets/${self:provider.stage}/sqs/evaluation_queue_url}
 
 functions:
   evaluate:
@@ -70,6 +71,17 @@ functions:
             parameters:
               paths:
                 id: true
+
+  publish-evaluation:
+    name: ${self:provider.stage}-checklist-publish-evaluation
+    image:
+      name: default
+      command:
+        - publish_evaluation.handler
+    events:
+      - http:
+          path: /checklists/evaluation
+          method: POST
 
 plugins:
   - serverless-deployment-bucket
