--- a/lambdas/checklist/serverless.yml
+++ b/lambdas/checklist/serverless.yml
@@ -30,19 +30,18 @@ provider:
     POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
+    EVALUATION_PROCESSOR_QUEUE_URL: ${ssm:/terraform/${self:provider.stage}/sqs/checklist_evaluation_processor_queue_url}
 
 functions:
-  evaluate:
-    name: ${self:provider.stage}-checklist-evaluate
+  evaluation-processor:
+    name: ${self:provider.stage}-checklist-evaluation-processor
     timeout: 30
     image:
       name: default
       command:
         - evaluate.handler
     events:
-      - http:
-          path: /checklists/evaluate
-          method: POST
+      - sqs: ${ssm:/terraform/${self:provider.stage}/sqs/checklist_evaluation_processor_queue_arn}
 
   generate:
     name: ${self:provider.stage}-checklist-generate
@@ -70,6 +69,17 @@ functions:
             parameters:
               paths:
                 id: true
+
+  evaluation-publisher:
+    name: ${self:provider.stage}-checklist-evaluation-publisher
+    image:
+      name: default
+      command:
+        - publish_evaluation.handler
+    events:
+      - http:
+          path: /checklists/evaluate
+          method: POST
 
 plugins:
   - serverless-deployment-bucket
