--- a/lambdas/company/serverless.yml
+++ b/lambdas/company/serverless.yml
@@ -40,6 +40,16 @@ functions:
       - http:
           path: /companies/{id}
           method: GET
+          cors:
+            origins:
+              - http://127.0.0.1:5173
+            allowCredentials: true
+          authorizer:
+            type: request
+            identitySource: method.request.header.Cookie
+            resultTtlInSeconds: 300
+            name: ${self:provider.stage}-company-retrieve-authorizer
+            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
           request:
             parameters:
               paths:
@@ -47,4 +57,3 @@ functions:
 
 plugins:
   - serverless-deployment-bucket
-  
