--- a/lambdas/hello/serverless.yml
+++ b/lambdas/hello/serverless.yml
@@ -39,7 +39,7 @@ functions:
             type: request
             identitySource: method.request.header.Cookie
             resultTtlInSeconds: 300
-            name: ${self:provider.stage}-authorizer
+            name: ${self:provider.stage}-hello-authorizer
             arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
 
 plugins:
