--- a/lambdas/position/serverless.yml
+++ b/lambdas/position/serverless.yml
@@ -35,7 +35,7 @@ functions:
     image:
       name: default
       command:
-        - handler.retrieve
+        - retrieve.handler
     events:
       - http:
           path: /positions/{id}
@@ -49,6 +49,31 @@ functions:
             identitySource: method.request.header.Cookie
             resultTtlInSeconds: 300
             name: ${self:provider.stage}-position-retrieve-authorizer
+            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+          request:
+            parameters:
+              paths:
+                id: true
+
+  checklist-status:
+    name: ${self:provider.stage}-position-checklist-status
+    image:
+      name: default
+      command:
+        - checklist_status.handler
+    events:
+      - http:
+          path: /positions/status/{id}
+          method: GET
+          cors:
+            origins:
+              - http://127.0.0.1:5173
+            allowCredentials: true
+          authorizer:
+            type: request
+            identitySource: method.request.header.Cookie
+            resultTtlInSeconds: 300
+            name: ${self:provider.stage}-position-checklist-status-authorizer
             arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
           request:
             parameters:
