--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -29,6 +29,8 @@ provider:
     POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
+    GITHUB_CLIENT_ID: ${ssm:/secrets/${self:provider.stage}/github_client_id}
+    GITHUB_CLIENT_SECRET: ${ssm:/secrets/${self:provider.stage}/github_client_secret}
 
 functions:
   register:
@@ -70,6 +72,21 @@ functions:
     events:
       - http:
           path: /logout
+          method: POST
+          cors:
+            origins:
+              - http://127.0.0.1:5173
+            allowCredentials: true
+
+  github:
+    name: ${self:provider.stage}-authentication-github
+    image:
+      name: default
+      command:
+        - github.handler
+    events:
+      - http:
+          path: /github
           method: POST
           cors:
             origins:
