--- a/lambdas/checklist/requirements.txt
+++ b/lambdas/checklist/requirements.txt
@@ -3,7 +3,9 @@ anyio==3.7.1
 boto3==1.29.6
 botocore==1.32.6
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
+cryptography==41.0.7
 distro==1.8.0
 exceptiongroup==1.1.3
 flake8==6.1.0
@@ -15,6 +17,8 @@ jmespath==1.0.1
 mccabe==0.7.0
 openai==1.3.3
 psycopg2-binary==2.9.9
+pycodestyle==2.11.1
+pycparser==2.21
 pydantic==2.5.1
 pydantic_core==2.14.3
 pyflakes==3.1.0
