Update GitHub API headers and add GitHub Fernet key

--- a/lambdas/checklist/serverless.yml
+++ b/lambdas/checklist/serverless.yml
@@ -25,6 +25,7 @@ provider:
     ENVIRONMENT: ${self:provider.stage}
     OPENAI_API_KEY: ${ssm:/secrets/${self:provider.stage}/openai_api_key}
     GITHUB_TOKEN: ${ssm:/secrets/${self:provider.stage}/github_token}
+    GITHUB_FERNET_KEY: ${ssm:/secrets/${self:provider.stage}/github_fernet_key}
     POSTGRES_HOST: ${ssm:/terraform/${self:provider.stage}/rds/endpoint}
     POSTGRES_PORT: ${ssm:/terraform/${self:provider.stage}/rds/port}
     POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
