--- a/lambdas/position/serverless.yml
+++ b/lambdas/position/serverless.yml
@@ -54,6 +54,7 @@ functions:
             parameters:
               paths:
                 id: true
+    timeout: 30
 
   checklist-status:
     name: ${self:provider.stage}-position-checklist-status
@@ -80,15 +81,15 @@ functions:
               paths:
                 id: true
 
-  candidates-status:
-    name: ${self:provider.stage}-position-candidates-status
+  retrieve-candidates:
+    name: ${self:provider.stage}-position-retreive-candidates
     image:
       name: default
       command:
-        - candidates_status.handler
+        - candidates.handler
     events:
       - http:
-          path: /positions/status/candidates/{id}
+          path: /positions/candidates/{id}
           method: GET
           cors:
             origins:
