add client endpoint to .env

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,2 +1,3 @@
 VITE_API_URL=https://XXXXXXXXXX.execute-api.us-east-1.amazonaws.com/dev
 VITE_GITHUB_CLIENT_ID=XXXXXXXXXXXXXXXXXXXX
+VITE_CLIENT_URL=https://XXXXXXXXXXXXXXXX
