--- a/.github/workflows/job-create-version-release.yml
+++ b/.github/workflows/job-create-version-release.yml
@@ -1,56 +1,58 @@
-on: workflow_call
+on:
+  workflow_call:
 
 jobs:
-  name: Releasing New Version
-  timeout-minutes: 15
-  runs-on: ubuntu-latest
-  environment: production
-  strategy:
-    matrix:
-      package:
-        - composition
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Setup Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      shell: bash
-      run: pip install -r requirements.txt
-    - name: Test
-      shell: bash
-      run: python -m unittest
-    - name: Build
-      shell: bash
-      run: python setup.py sdist bdist_wheel
-    - name: Semantic Release
-      uses: cycjimmy/semantic-release-action@v2
-      with:
-        semantic_version: 17
-        branches: ['master']
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: |
-          Changes in this Release
-          - First Change
-          - Second Change
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/my-artifact.zip
-        asset_name: my-artifact.zip
-        asset_content_type: application/zip
+  run:
+    name: Releasing New Version
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    environment: production
+    strategy:
+      matrix:
+        package:
+          - composition
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        shell: bash
+        run: pip install -r requirements.txt
+      - name: Test
+        shell: bash
+        run: python -m unittest
+      - name: Build
+        shell: bash
+        run: python setup.py sdist bdist_wheel
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v2
+        with:
+          semantic_version: 17
+          branches: ['master']
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./dist/my-artifact.zip
+          asset_name: my-artifact.zip
+          asset_content_type: application/zip
